<package format="3">
  <name>viso2_ros</name>
  <version>0.0.1</version>
  <description>This is the ROS wrapper for libviso2, library for visual odometry (see package libviso2).</description>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/viso2_ros</url>
  <url type="bugtracker">https://github.com/srv/viso2/issues</url>

  <author email="stephan.wirth@uib.es">Stephan Wirth</author>
  <maintainer email="stephan.wirth@uib.es">Stephan Wirth</maintainer>

  <author email="mikhel.sk@gmail.com">Stanislav Mikhel</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libviso2</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>std_srvs</build_depend> 
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend> 
  <build_depend>image_geometry</build_depend>
  
  <!--
  <build_depend>message_filters</build_depend> 

   
  <build_depend>tf</build_depend> 
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_ros</build_depend> 
  
  <build_depend>message_generation</build_depend>
  -->
  
  <exec_depend>libviso2</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  
  
  
  <!--
  <run_depend>message_filters</run_depend>

   
  <run_depend>tf</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>pcl_ros</run_depend>
  
  <run_depend>message_runtime</run_depend>
  -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
